syntax = "proto3";

package ecommerce.v1;

import "ecommerce/v1/common.proto";
import "google/protobuf/timestamp.proto";

service IdentityService {
  rpc SignIn(IdentitySignInRequest) returns (IdentitySignInResponse);
  rpc SignOut(IdentitySignOutRequest) returns (IdentitySignOutResponse);
  rpc RefreshToken(IdentityRefreshTokenRequest) returns (IdentityRefreshTokenResponse);
  rpc ListMyPermissions(IdentityListMyPermissionsRequest) returns (IdentityListMyPermissionsResponse);
  rpc ListStaffSessions(IdentityListStaffSessionsRequest) returns (IdentityListStaffSessionsResponse);
  rpc ForceSignOutStaff(IdentityForceSignOutStaffRequest) returns (IdentityForceSignOutStaffResponse);
  rpc CreateStaff(IdentityCreateStaffRequest) returns (IdentityCreateStaffResponse);
  rpc ListStaff(IdentityListStaffRequest) returns (IdentityListStaffResponse);
  rpc UpdateStaff(IdentityUpdateStaffRequest) returns (IdentityUpdateStaffResponse);
  rpc InviteStaff(IdentityInviteStaffRequest) returns (IdentityInviteStaffResponse);
  rpc AcceptInvite(IdentityAcceptInviteRequest) returns (IdentityAcceptInviteResponse);
  rpc TransferOwner(IdentityTransferOwnerRequest) returns (IdentityTransferOwnerResponse);
  rpc CreateRole(IdentityCreateRoleRequest) returns (IdentityCreateRoleResponse);
  rpc ListRolesWithPermissions(IdentityListRolesWithPermissionsRequest) returns (IdentityListRolesWithPermissionsResponse);
  rpc UpdateRole(IdentityUpdateRoleRequest) returns (IdentityUpdateRoleResponse);
  rpc DeleteRole(IdentityDeleteRoleRequest) returns (IdentityDeleteRoleResponse);
  rpc AssignRoleToStaff(IdentityAssignRoleRequest) returns (IdentityAssignRoleResponse);
  rpc ListRoles(IdentityListRolesRequest) returns (IdentityListRolesResponse);
}

message IdentitySignInRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string email = 3;
  string login_id = 4;
  string phone = 5;
  string password = 6;
}

message IdentitySignInResponse {
  string access_token = 1;
  string store_id = 2;
  string tenant_id = 3;
  string staff_id = 4;
  string role = 5;
  google.protobuf.Timestamp expires_at = 6;
}

message IdentitySignOutRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
}

message IdentitySignOutResponse {
  bool signed_out = 1;
}

message IdentityRefreshTokenRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
}

message IdentityRefreshTokenResponse {
  string access_token = 1;
  string store_id = 2;
  string tenant_id = 3;
  string staff_id = 4;
  string role = 5;
  google.protobuf.Timestamp expires_at = 6;
}

message IdentityListMyPermissionsRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
}

message IdentityListMyPermissionsResponse {
  repeated string permission_keys = 1;
  string role_key = 2;
}

message IdentityStaffSession {
  string session_id = 1;
  string staff_id = 2;
  string display_name = 3;
  string email = 4;
  string role_key = 5;
  string status = 6;
  string ip_address = 7;
  string user_agent = 8;
  google.protobuf.Timestamp last_seen_at = 9;
  google.protobuf.Timestamp created_at = 10;
}

message IdentityListStaffSessionsRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
}

message IdentityListStaffSessionsResponse {
  repeated IdentityStaffSession sessions = 1;
}

message IdentityForceSignOutStaffRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string staff_id = 3;
  ActorContext actor = 4;
}

message IdentityForceSignOutStaffResponse {
  bool revoked = 1;
}

message IdentityCreateStaffRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string email = 3;
  string login_id = 4;
  string phone = 5;
  string password = 6;
  string role_id = 7;
  string display_name = 8;
  ActorContext actor = 9;
}

message IdentityCreateStaffResponse {
  string staff_id = 1;
  string store_id = 2;
  string tenant_id = 3;
  string role_id = 4;
  string role_key = 5;
  string display_name = 6;
}

message IdentityStaffSummary {
  string staff_id = 1;
  string email = 2;
  string login_id = 3;
  string phone = 4;
  string role_id = 5;
  string role_key = 6;
  string status = 7;
  string display_name = 8;
}

message IdentityListStaffRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
}

message IdentityListStaffResponse {
  repeated IdentityStaffSummary staff = 1;
}

message IdentityUpdateStaffRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string staff_id = 3;
  string role_id = 4;
  string status = 5;
  string display_name = 6;
  ActorContext actor = 7;
}

message IdentityUpdateStaffResponse {
  bool updated = 1;
  IdentityStaffSummary staff = 2;
}

message IdentityInviteStaffRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string email = 3;
  string role_id = 4;
  string display_name = 5;
  ActorContext actor = 6;
}

message IdentityInviteStaffResponse {
  string invite_id = 1;
  string invite_token = 2;
  string email = 3;
  string role_id = 4;
  google.protobuf.Timestamp expires_at = 5;
}

message IdentityAcceptInviteRequest {
  string token = 1;
  string password = 2;
  string display_name = 3;
}

message IdentityAcceptInviteResponse {
  string staff_id = 1;
  string store_id = 2;
  string store_code = 3;
  string email = 4;
  string role_key = 5;
  google.protobuf.Timestamp accepted_at = 6;
}

message IdentityTransferOwnerRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string new_owner_staff_id = 3;
  ActorContext actor = 4;
}

message IdentityTransferOwnerResponse {
  bool transferred = 1;
  IdentityStaffSummary new_owner = 2;
  IdentityStaffSummary previous_owner = 3;
}

message IdentityRole {
  string id = 1;
  string key = 2;
  string name = 3;
  string description = 4;
}

message IdentityRoleDetail {
  string id = 1;
  string key = 2;
  string name = 3;
  string description = 4;
  repeated string permission_keys = 5;
}

message IdentityCreateRoleRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string key = 3;
  string name = 4;
  string description = 5;
  repeated string permission_keys = 6;
  ActorContext actor = 7;
}

message IdentityCreateRoleResponse {
  IdentityRole role = 1;
}

message IdentityListRolesWithPermissionsRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
}

message IdentityListRolesWithPermissionsResponse {
  repeated IdentityRoleDetail roles = 1;
}

message IdentityUpdateRoleRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string role_id = 3;
  string name = 4;
  string description = 5;
  repeated string permission_keys = 6;
  ActorContext actor = 7;
}

message IdentityUpdateRoleResponse {
  bool updated = 1;
  IdentityRoleDetail role = 2;
}

message IdentityDeleteRoleRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string role_id = 3;
  ActorContext actor = 4;
}

message IdentityDeleteRoleResponse {
  bool deleted = 1;
}

message IdentityAssignRoleRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string staff_id = 3;
  string role_id = 4;
  ActorContext actor = 5;
}

message IdentityAssignRoleResponse {
  bool assigned = 1;
}

message IdentityListRolesRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
}

message IdentityListRolesResponse {
  repeated IdentityRole roles = 1;
}
